fixes ellipsis text align

--- a/webapp/src/main/webapp/src/styles.less
+++ b/webapp/src/main/webapp/src/styles.less
@@ -310,6 +310,7 @@ sb-button-typeahead .input-group-btn > .btn,
 
 .label-max-width {
   text-overflow: ellipsis;
+  text-align: left;
   overflow: hidden;
   max-width: 330px;
 }
